Skip to content
GitLab
Projects Groups Topics Snippets
  • /
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Register
  • Sign in
  • Files Files
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributor statistics
    • Graph
    • Compare revisions
  • Issues 382
    • Issues 382
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 62
    • Merge requests 62
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Artifacts
    • Schedules
  • Deployments
    • Deployments
    • Environments
    • Releases
  • Packages and registries
    • Packages and registries
    • Container Registry
    • Model experiments
  • Monitor
    • Monitor
    • Incidents
  • Analytics
    • Analytics
    • Value stream
    • CI/CD
    • Repository
  • Wiki
    • Wiki
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOMEGNOME
  • FilesFiles
  • Issues
  • #1189

Files with unknown MIME type do not display emblem icons

Affected version

  • Nightly flatpak: Yes
  • Other: Arch Linux (version 3.32.1-1); Ubuntu 18.04 (version 1:3.26.4-0)

Steps to reproduce

  1. Install an extension that provides emblems (I tested using a small test project and nautilus-dropbox.
  2. Create a file full of NUL characters with no extension (e.g. dd bs=4M count=10 if=/dev/zero of=/home/colin/Dropbox/noext). The fact that it's NUL is actually significant--this guarantees that the MIME type will not be determinable.
  3. Find the file in nautilus.

Current behavior

Unlike other files, the newly-created one will not have an emblem.

Expected behavior

Ideally, it would have an emblem.

Additional information

The issue seems to be in nautilus_file_get_icon in the branch that is activated when nautilus_icon_info_is_fallback (icon ) returns true. I have a patch that I will submit shortly, but I figured I would create a proper ticket for discussion/documentation.

To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking