file: use emblems for files that use default icon

Files that fall back on the statically-allocated default GIcon will not
have emblems drawn on them. Create a new GIcon with emblems on it if
needed, and document the circumstances that lead to this case being hit.

Fixes https://gitlab.gnome.org/GNOME/nautilus/issues/1189